Assert & Segfault when changing from scene TC to TD #38260

Closed
opened 2014-01-17 12:34:34 +01:00 by Terry Wallwork · 6 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
I am using Blender 2.69 GIT Rev 2014-01-17-17-35-03-63ccb26
on a Fedora 20 Linux 64Bit box.

I have attached a Blend file which consists of a number of different scenes.

If I switch from the scene named TC to scene TD, Blender asserts/segfaults. This only seems to happen when I am opening the file with the Load Interface option enabled.

I have attached the Blend file and my system info and the backtrace file.

backtrace.txt

system-info.txt

[SU-TF]-3DViewEditorHeader-ObjectMenu-Parent-Armature_Deform.blend

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender 2.69 GIT Rev 2014-01-17-17-35-03-63ccb26 on a Fedora 20 Linux 64Bit box. I have attached a Blend file which consists of a number of different scenes. If I switch from the scene named TC to scene TD, Blender asserts/segfaults. This only seems to happen when I am opening the file with the Load Interface option enabled. I have attached the Blend file and my system info and the backtrace file. [backtrace.txt](https://archive.blender.org/developer/F69669/backtrace.txt) [system-info.txt](https://archive.blender.org/developer/F69670/system-info.txt) [[SU-TF]-3DViewEditorHeader-ObjectMenu-Parent-Armature_Deform.blend](https://archive.blender.org/developer/F69671/_SU-TF_-3DViewEditorHeader-ObjectMenu-Parent-Armature_Deform.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1
Sergey Sharybin self-assigned this 2014-01-17 12:50:53 +01:00

This issue was referenced by blender/blender-addons-contrib@d03e768761

This issue was referenced by blender/blender-addons-contrib@d03e7687613ff288e027198ac58df59cd9f1677e

This issue was referenced by d03e768761

This issue was referenced by d03e7687613ff288e027198ac58df59cd9f1677e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d03e768761.

Closed by commit d03e768761.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38260
No description provided.