source/blender/blenkernel/BKE_depsgraph.h
@@ -128,7 +128,7 @@ int  DAG_id_type_tagged(struct Main *bmain, short idtype);
 void DAG_scene_flush_update(struct Main *bmain, struct Scene *sce, unsigned int lay, const short do_time);
 void DAG_ids_flush_tagged(struct Main *bmain);
 void DAG_ids_check_recalc(struct Main *bmain, struct Scene *scene, int time);
-void DAG_ids_clear_recalc(struct Main *bmain, struct Scene *scene);
+void DAG_ids_clear_recalc(struct Main *bmain);
 
 /* Armature: sorts the bones according to dependencies between them */
 
